// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReturnCollectionAddress - snapshots individual is filling out form for a group 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan their return journey"
    sectionPosition="Section 4 of 5"
  />
  <Question
    text="What address do you want the group to be collected from?"
  />
  <RadioGroup
    error={null}
  >
    <FieldError
      text={null}
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="The address they were brought to"
      onClickCallback={[Function]}
      validation={[Function]}
      value="sameAsOutwardDestinationAddress"
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="Another address"
      onClickCallback={[Function]}
      validation={[Function]}
      value="other"
    />
  </RadioGroup>
</FormSection>
`;

exports[`ReturnCollectionAddress - snapshots individual is filling out form for someone else 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan their return journey"
    sectionPosition="Section 3 of 4"
  />
  <Question
    text="Where does John want to be collected from?"
  />
  <RadioGroup
    error={null}
  >
    <FieldError
      text={null}
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="The address they were brought to"
      onClickCallback={[Function]}
      validation={[Function]}
      value="sameAsOutwardDestinationAddress"
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="Another address"
      onClickCallback={[Function]}
      validation={[Function]}
      value="other"
    />
  </RadioGroup>
</FormSection>
`;

exports[`ReturnCollectionAddress - snapshots individual is filling out form for themselves 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan your return journey"
    sectionPosition="Section 3 of 4"
  />
  <Question
    text="Where do you want to be collected from?"
  />
  <RadioGroup
    error={null}
  >
    <FieldError
      text={null}
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="The address I was brought to"
      onClickCallback={[Function]}
      validation={[Function]}
      value="sameAsOutwardDestinationAddress"
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="Another address"
      onClickCallback={[Function]}
      validation={[Function]}
      value="other"
    />
  </RadioGroup>
</FormSection>
`;

exports[`ReturnCollectionAddress - snapshots renders with an error 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan your return journey"
    sectionPosition="Section 3 of 4"
  />
  <Question
    text="Where do you want to be collected from?"
  />
  <RadioGroup
    error="Required"
  >
    <FieldError
      text="Required"
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="The address I was brought to"
      onClickCallback={[Function]}
      validation={[Function]}
      value="sameAsOutwardDestinationAddress"
    />
    <RadioButton
      fieldName="returnCollectionAddress"
      label="Another address"
      onClickCallback={[Function]}
      validation={[Function]}
      value="other"
    />
  </RadioGroup>
</FormSection>
`;
